--- a/Projet/monappli/templates/List_comu_empl.tmpl
+++ b/Projet/monappli/templates/List_comu_empl.tmpl
@@ -150,7 +150,7 @@ table.mon_tableau  {
 
 <img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
     <br>
-    <h1>Employé ayant communiqué avec {{employe_nom }} {{ employe_prenom }}</h1>
+    <h1>Employés ayant communiqué avec {{employe_nom }} {{ employe_prenom }}</h1>
     <br>
     <p>Ma date du début : {{ date_debut }}</p>
     <p>Ma date de fin : {{ date_fin }}</p>
@@ -180,7 +180,7 @@ L'histogramme ci-dessous représente le nombre de mails envoyés/reçus pour les
 <hr class="detail-separator" style="max-width: 600px; border-color : rgba(0, 0, 0, 1);">
 <br>
 <div class="texte">
-    Les tableaux ci-dessous représentent le nombre de mails envoyés/reçus pour tous les employés ayant communiqués avec {{ employe_nom }} {{ employe_prenom }}, dans la période du {{ date_debut }} au {{ date_fin }}.
+    Les tableaux ci-dessous représentent le nombre de mails envoyés/reçus pour tous les employés ayant communiqué avec {{ employe_nom }} {{ employe_prenom }}, dans la période du {{ date_debut }} au {{ date_fin }}.
 </div>
 <br>
 
@@ -206,7 +206,7 @@ L'histogramme ci-dessous représente le nombre de mails envoyés/reçus pour les
 <br>
 
 <div class="texte">
-    Nous pouvons regarder plus en detail les mails envoyés et reçus par les employés ayant communiqué avec {{ employe_nom }} {{ employe_prenom }}.
+    Nous pouvons regarder plus en détail les mails envoyés et reçus par les employés ayant communiqué avec {{ employe_nom }} {{ employe_prenom }}.
     Le premier tableau représente les mails envoyés par ces employés, et le deuxième tableau représente les mails reçus par ces employés.
 </div>
 <br>
