--- a/Projet/monappli/templates/Liste_mots.tmpl
+++ b/Projet/monappli/templates/Liste_mots.tmpl
@@ -137,7 +137,7 @@ div.texte { font-size: 22px ;
 <img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
     <br>
 
-<h1> Liste des mails contenant les mots : {% for item in liste_mots %} {{ item }} {% endfor %} </h1>
+<h1> Liste des mails contenants le(s) mot(s) : {% for item in liste_mots %} {{ item }} {% endfor %} </h1>
 
 <br>
 
