--- a/Projet/monappli/templates/PgdNBmail.tmpl
+++ b/Projet/monappli/templates/PgdNBmail.tmpl
@@ -139,7 +139,7 @@ div.texte { font-size: 22px ;
     <br>
 
 
-    <p>Ma date du début : {{ date_debut }}</p>
+    <p>Ma date de début : {{ date_debut }}</p>
     <p>Ma date de fin : {{ date_fin }}</p>
     <p> Type d'échange : {{ echange }}</p>
 
@@ -166,7 +166,7 @@ L'histogramme ci-dessous montre les 10 jours où le plus grand nombre de mails o
 
 <br>
 <div class="texte">
-Le tableau ci-dessous présente le nombre de mails échangés chaque jour entre le {{ date_debut }} et le {{ date_fin }}.
+Le tableau ci-dessous représente le nombre de mails échangés chaque jour entre le {{ date_debut }} et le {{ date_fin }}.
 </div>
 
 <br>
