--- a/Projet/monappli/templates/employeXmail.tmpl
+++ b/Projet/monappli/templates/employeXmail.tmpl
@@ -194,13 +194,13 @@ table.mon_tableau  {
     <br>
 
 {% if disp1|length_is:"0" %}
-    <div> Il n'y a pas eu de mails envoyés ou reçus  </div>
+    <div> Il n'y a pas eu de mails envoyés ou reçus.  </div>
     <br>
     <br>
     <br>
     <br>
 {% elif disp2|length_is:"0" %}
-    <div> Il n'y a pas eu de mails envoyés ou reçus . </div>
+    <div> Il n'y a pas eu de mails envoyés ou reçus. </div>
     <br>
     <br>
     <br>
@@ -212,7 +212,7 @@ table.mon_tableau  {
     <br>
     <br>
 {% elif disp4|length_is:"0" %}
-<div> Il n'y a pas eu de mails envoyés ou reçus . </div>
+<div> Il n'y a pas eu de mails envoyés ou reçus. </div>
 <br>
     <br>
     <br>
@@ -224,8 +224,8 @@ table.mon_tableau  {
     <br>
 
     <div class="texte">
-    Voici les principaux employés ayant envoyés/reçus plus de {{seuil}} mails entre le {{ date_debut }} et le {{ date_fin }}.
-    Avec la possibilité de visualiser les echanges interne ou externe.
+    Voici les principaux employés ayant envoyé/reçu plus de {{seuil}} mails entre le {{ date_debut }} et le {{ date_fin }}.
+    Avec la possibilité de visualiser les échanges internes ou externes.
 
 </div>
 
@@ -251,7 +251,7 @@ table.mon_tableau  {
     <br>
     Les employés ayant envoyé plus de {{ seuil }} mails sont affichés dans le tableau de gauche,
     tandis que ceux ayant reçu plus de {{ seuil }} mails sont affichés dans le tableau de droite.
-    Ici on ne différencie pas les echanges interne et externe.
+    Ici on ne différencie pas les échanges internes et externes.
 </div>
 
     <br>
@@ -306,8 +306,8 @@ table.mon_tableau  {
 
 
 <div class="texte">
-Voici les principaux employés ayant envoyés/reçus moins de {{seuil}} mails entre le {{ date_debut }} et le {{ date_fin }}.
-Avec la possibilité de visualiser les echanges interne ou externe.
+Voici les principaux employés ayant envoyé/reçu moins de {{seuil}} mails entre le {{ date_debut }} et le {{ date_fin }}.
+Avec la possibilité de visualiser les échanges internes ou externes.
 </div>
 <br>
 
@@ -329,7 +329,7 @@ Avec la possibilité de visualiser les echanges interne ou externe.
     <br>
     Les employés ayant envoyé moins de {{ seuil }} mails sont affichés dans le tableau de gauche,
     tandis que ceux ayant reçu moins de {{ seuil }} mails sont affichés dans le tableau de droite.
-    Ici on ne différencie pas les echanges interne et externe.
+    Ici on ne différencie pas les échanges internes et externes.
 </div>
 
     <br>
