--- a/Projet/monappli/templates/index.tmpl
+++ b/Projet/monappli/templates/index.tmpl
@@ -139,45 +139,45 @@ div.texte { font-size: 22px ;
 <div class="texte">
 
 
-Nous avons développé une application locale avec l’API Django sur la base de données Enron, afin d’enquêter sur l’ensemble des mails de cette entreprise américaine du secteur de l’énergie ayant fait faillite en 2001 après un cas de fraude et de manipulation financière
+Nous avons développé une application locale avec l’API Django sur la base de données Enron. Elle permet d’enquêter sur l’ensemble des mails de cette entreprise américaine du secteur de l’énergie ayant fait faillite en 2001 après un cas de fraude et de manipulation financière.
 </div>
     <br>
 
 <div class="texte">
-L'application s’adresse à des enquêteurs fictifs ayant besoin d'effectuer des recherches sur l’ensemble des mails des employés de cette entreprise pour comprendre leur rôle dans cette affaire.
+L'application s’adresse à des enquêteurs fictifs ayant besoin d'effectuer des recherches sur l’ensemble des mails des employés de cette entreprise, dans le but de comprendre leur rôle dans cette affaire.
 </div>
 
     <br>
     <br>
-Explication des requêtes disponible sur le site:
+Explication des requêtes disponibles sur le site :
 <br>
 <br>
 
-<p>Attributs: Affiche les attributs d’un employé (identité, catégorie, e-mails) en connaissant son nom ou
+<p>Attributs : Affiche les attributs d’un employé (identité, catégorie, e-mails) en connaissant son nom ou
 l’une de ses adresses e-mail
 
 <br>
 <br>
-X mails: Affiche les employés ayant envoyé et/ou reçu plus que (resp. moins que) x mails dans un intervalle
-de temps choisit
+X mails : Affiche les employés ayant envoyé et/ou reçu plus que (resp. moins que) x mails dans un intervalle
+de temps choisi
 <br>
 <br>
-Communications: Affiche la liste des employés ayant communiqué avec un employé donné sur un intervalle de
+Communications : Affiche la liste des employés ayant communiqué avec un employé donné sur un intervalle de
 temps donné
 
 <br>
 <br>
-Couples employés: Affiche les couples d’employés ayant communiqué dans un intervalle de temps choisit
+Couples employés : Affiche les couples d’employés ayant communiqué dans un intervalle de temps choisi
 <br>
 <br>
-Jours: Affiche les jours dans une période donnée ayant connu le plus grand nombre d’échanges de
-mails, on peut choisir d'afficher les echanges internes (entre employés de la même entreprise) ou externes ou les deux
+Jours : Affiche les jours dans une période donnée ayant connu le plus grand nombre d’échanges de
+mails, on peut choisir d'afficher les échanges internes (entre employés de la même entreprise) ou externes ou les deux
 <br>
 <br>
-Mots: Afficher les mails contenant une liste de mots déterminés
+Mots : Affiche les mails contenant une liste de mots déterminés
 <br>
 <br>
-Conversations: Affiche les conversations entre deux employés donnés sur un intervalle de temps donné
+Conversations : Affiche les conversations entre deux employés donnés sur un intervalle de temps donné
 </p>
 
     <br>
