--- a/Projet/monappli/templates/requete1.tmpl
+++ b/Projet/monappli/templates/requete1.tmpl
@@ -165,11 +165,11 @@ div.texte { font-size: 20px ;
         <br>
         <br>
 
-        <div> Rentrer l'adresse mail d'un employé pour obtenir ses attributs </div>
+        <div> Rentrer l'adresse mail d'un employé pour obtenir ses attributs :</div>
 
 
         <p>
-        adresse mail de l'employé:
+        Adresse mail de l'employé :
             <input type="text" name="adresse_employe">
         </p>
 <br>
