--- a/Projet/monappli/templates/requete3.tmpl
+++ b/Projet/monappli/templates/requete3.tmpl
@@ -148,12 +148,12 @@ div.texte { font-size: 22px ;
     <br>
 
     <div class="texte">
-    Cette page de recherche a pour objectif d'analyser les employées ayant communiquer avec un individu spécifique.
+    Cette page de recherche a pour objectif d'analyser les employés ayant communiqué avec un individu spécifique.
     </div>
     <div class="texte">
     Son principe est simple : entrez le nom de l'employé dont vous souhaitez explorer les interactions,
       ainsi qu'une période spécifique, une liste détaillée de tous les employés
-       ayant communiqué avec cet employé pendant cette période sera renvoyé.
+       ayant communiqué avec cet employé pendant cette période sera renvoyée.
     </div>
 
     <br>
@@ -177,10 +177,10 @@ div.texte { font-size: 22px ;
         <p>
 
 
-            Date de début:
+            Date de début :
             <input type="date" name="date_debut" style="margin-right: 30px;">
 
-            Date de fin:
+            Date de fin :
             <input type="date" name="date_fin">
 
         </p>
