--- a/Projet/monappli/templates/requete4.tmpl
+++ b/Projet/monappli/templates/requete4.tmpl
@@ -142,7 +142,7 @@ div.texte { font-size: 22px ;
         {% csrf_token %}
 <br>
   <div class="texte">
-            Cette page a été conçue pour trouver les couples d’employés ayant communiqué dans un intervalle de temps choisit par l’utilisateur.
+            Cette page a été conçue pour trouver les couples d’employés ayant communiqué dans un intervalle de temps choisi par l’utilisateur.
             Pour cela, il suffit de rentrer la date de début et la date de fin de la période de recherche. <br>
             Il est également possible de rentrer un nombre de mails limite. <br>
 
@@ -152,25 +152,25 @@ div.texte { font-size: 22px ;
         <br>
         <br>
 
-        <div> Rentrer la date de début et la date de fin de la période de recherche. </div>
+        <div> Rentrer la date de début et la date de fin de la période de recherche : </div>
 
        <p>
 
 
-            Date de début:
+            Date de début :
             <input type="date" name="date_debut" style="margin-right: 30px;">
 
-            Date de fin:
+            Date de fin :
             <input type="date" name="date_fin">
 
         </p>
 
   <br>
 
-<div> Rentrer le nombre de mails limite. </div>
+<div> Rentrer le nombre de mails limite : </div>
 
         <p>
-            Nombre de mails limite:
+            Nombre de mails limite :
             <input type="number" name="seuil">
         </p>
 <br>
