--- a/Projet/monappli/templates/requete5.tmpl
+++ b/Projet/monappli/templates/requete5.tmpl
@@ -139,13 +139,13 @@ div.texte { font-size: 22px ;
 
 
 
-    <h1> Le plus grand nombre d'échange de mail dans un période </h1>
+    <h1> Le plus grand nombre d'échanges de mails dans une période </h1>
     <br>
 
     <form action="{% url 'PgdNBmail' %}" method="post">
         {% csrf_token %}
 
-<div class="texte"> Cette Page à pour objectif de vous permettre de trouver le plus grand nombre d'échange de mail dans une période donnée.
+<div class="texte"> Cette page a pour objectif de vous permettre de trouver le plus grand nombre d'échanges de mails dans une période donnée.
  Pour cela, veuillez renseigner les informations suivantes : </div>
 <br>
 <br>
@@ -165,10 +165,10 @@ div.texte { font-size: 22px ;
         <p>
 
 
-            Date de début:
+            Date de début :
             <input type="date" name="date_debut" style="margin-right: 30px;">
 
-            Date de fin:
+            Date de fin :
             <input type="date" name="date_fin">
 
         </p>
