--- a/Projet/monappli/templates/requete6.tmpl
+++ b/Projet/monappli/templates/requete6.tmpl
@@ -164,7 +164,7 @@ div.texte { font-size: 20px ;
 
         <div class="texte">
             Cette page a été conçue pour trouver les mails contenant une liste de mots déterminés, classés par destinataire ou expéditeur.
-            vous pouvez rentrer le nombre de mots que vous voulez rechercher, puis les rentrer un par un.
+            Vous pouvez rentrer le nombre de mots que vous voulez rechercher, puis les rentrer un par un.
 
         </div>
 
@@ -172,8 +172,8 @@ div.texte { font-size: 20px ;
         <br>
         <br>
 
-        Classer les mail par destinataire ou expediteur:
-        <p> Type de recherche:
+        Classer les mails par destinataire ou expéditeur :
+        <p> Type de recherche :
         <select name="choix">
             <option value="destinataire">Destinataire</option>
             <option value="expediteur">Expediteur</option>
@@ -182,7 +182,7 @@ div.texte { font-size: 20px ;
 
 
 
-        Rentrer le nombre de mots que vous voulez rentrer:
+        Rentrer le nombre de mots que vous voulez rentrer :
         <p>
             Nombre de mots : <input type="number" id="nbmot" name="nbmot" oninput="afficherChamps()">
         </p>
