--- a/Projet/monappli/templates/requete7.tmpl
+++ b/Projet/monappli/templates/requete7.tmpl
@@ -152,7 +152,7 @@ div.texte { font-size: 22px ;
     Une conversation est définie par un échange de mails entre deux employés.
     </div>
     <div class="texte">
-    Pour retrouver les conversations entre deux employés, il faut inquiquer leur nome et prénom, ainsi que la période de recherche. <br>
+    Pour retrouver les conversations entre deux employés, il faut indiquer leur nom et prénom, ainsi que la période de recherche. <br>
     </div>
 
     <br>
@@ -187,10 +187,10 @@ div.texte { font-size: 22px ;
         <p>
 
 
-            Date de début:
+            Date de début :
             <input type="date" name="date_debut" style="margin-right: 30px;">
 
-            Date de fin:
+            Date de fin :
             <input type="date" name="date_fin">
 
         </p>
