--- a/Projet/monappli/templates/attributs_employes.tmpl
+++ b/Projet/monappli/templates/attributs_employes.tmpl
@@ -156,7 +156,7 @@ div.texte { font-size: 22px ;
     {% else %}
     <br>
 
-    <h1> Informations trouvée sur {{nom_employe }} {{ prenom_employe }}</h1>
+    <h1> Informations trouvées sur {{nom_employe }} {{ prenom_employe }}</h1>
 </br>
 
     <p>Nom : {{ nom_employe }}</p>
