--- a/Projet/monappli/templates/conv.tmpl
+++ b/Projet/monappli/templates/conv.tmpl
@@ -152,9 +152,9 @@ div.texte { font-size: 22px ;
 
 <img src="https://upload.wikimedia.org/wikipedia/fr/2/2f/EnronLogo.png">
     <br>
-    <h1>Conversation entre {{employe_nom1 }} {{ employe_prenom1 }} et {{ employe_nom2 }} {{ employe_prenom2 }}</h1>
+    <h1>Conversations entre {{employe_nom1 }} {{ employe_prenom1 }} et {{ employe_nom2 }} {{ employe_prenom2 }}</h1>
     <br>
-    <p>Ma date du début : {{ date_debut }}</p>
+    <p>Ma date de début : {{ date_debut }}</p>
     <p>Ma date de fin : {{ date_fin }}</p>
     <p> Mon premier employé : {{ employe_nom1 }} {{ employe_prenom1 }}</p>
     <p> Mon deuxième employé : {{ employe_nom2 }} {{ employe_prenom2 }}</p>
@@ -162,7 +162,7 @@ div.texte { font-size: 22px ;
 <hr class="detail-separator" style="max-width: 600px; border-color : rgba(0, 0, 0, 1);">
 
 {% if liste1|length_is:"0" %}
-    <div> Il n'y a pas eu de conversation entre le {{ date_debut }} et le {{ date_fin }}, pour  {{employe_nom1 }} {{ employe_prenom1 }} et {{ employe_nom2 }} {{ employe_prenom2 }}  </div>
+    <div> Il n'y a pas eu de conversations entre le {{ date_debut }} et le {{ date_fin }}, pour  {{employe_nom1 }} {{ employe_prenom1 }} et {{ employe_nom2 }} {{ employe_prenom2 }}  </div>
     <br>
     <br>
     <br>
@@ -170,7 +170,7 @@ div.texte { font-size: 22px ;
     {% else %}
 <br>
 <div class="texte">
-Les tableau ci-dessous montre les mails échangés entre {{ employe_nom1 }} {{ employe_prenom1 }} et {{ employe_nom2 }} {{ employe_prenom2 }}, ils sont classés par sujet, un tableau représente une conversation.
+Les tableaux ci-dessous montrent les mails échangés entre {{ employe_nom1 }} {{ employe_prenom1 }} et {{ employe_nom2 }} {{ employe_prenom2 }}, ils sont classés par sujet, un tableau représente une conversation.
 </div>
 <br>
 
