--- a/Projet/monappli/templates/requete2.tmpl
+++ b/Projet/monappli/templates/requete2.tmpl
@@ -148,25 +148,25 @@ div.texte { font-size: 22px ;
 <div class = "texte"> Cette page a pour objectif de trouver les employés ayant envoyé et/ou reçu plus que (resp. moins que) x mails entre deux dates données. </div>
 <br>
 <br>
-<div> Rentrer la date de début et la date de fin de la période de recherche. </div>
+<div> Rentrer la date de début et la date de fin de la période de recherche : </div>
 
        <p>
 
 
-            Date de début:
+            Date de début :
             <input type="date" name="date_debut" style="margin-right: 30px;">
 
-            Date de fin:
+            Date de fin :
             <input type="date" name="date_fin">
 
         </p>
 
   <br>
 
-<div> Rentrer le nombre de mails limite. </div>
+<div> Rentrer le nombre de mails limite : </div>
 
         <p>
-            Nombre de mails limite:
+            Nombre de mails limite :
             <input type="number" name="seuil">
         </p>
 <br>
