--- a/Projet/monappli/templates/requete3.tmpl
+++ b/Projet/monappli/templates/requete3.tmpl
@@ -142,7 +142,7 @@ div.texte { font-size: 22px ;
     <form action="{% url 'List_comu_empl' %}" method="post">
         {% csrf_token %}
 
-    <h1>Recherche d'un employé</h1>
+    <h1>Communication d'un employé</h1>
 
 
     <br>
