--- a/Projet/monappli/templates/requete7.tmpl
+++ b/Projet/monappli/templates/requete7.tmpl
@@ -152,7 +152,7 @@ div.texte { font-size: 22px ;
     Une conversation est définie par un échange de mails entre deux employés.
     </div>
     <div class="texte">
-    Pour retrouver les conversations entre deux employés, il faut indiquer leur nom et prénom, ainsi que la période de recherche. <br>
+    Pour retrouver les conversations entre deux employés, il faut indiquer leur nom et prénom. <br>
     </div>
 
     <br>
@@ -182,18 +182,6 @@ div.texte { font-size: 22px ;
         </p>
         <br>
 
-<div> Indiquer la période de recherche :</div>
-
-        <p>
-
-
-            Date de début :
-            <input type="date" name="date_debut" style="margin-right: 30px;">
-
-            Date de fin :
-            <input type="date" name="date_fin">
-
-        </p>
 
     <div class="envoi"><input type="submit" value="Rechercher"></div>
 
